--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   cached_network_image: ^3.2.1
-  webview_flutter: ^3.0.4
+  # webview_flutter: ^3.0.4
+  url_launcher: ^6.1.5
 
 dev_dependencies:
   flutter_test:
