--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,18 @@ dependencies:
   cached_network_image: ^3.2.1
   # webview_flutter: ^3.0.4
   url_launcher: ^6.1.5
+  flutter_native_splash: ^2.2.7
+
+flutter_native_splash:
+  color: "#f4feff"
+  image: assets/image/news_icon.png
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -62,7 +70,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/image/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
