--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,17 @@ dependencies:
   # webview_flutter: ^3.0.4
   url_launcher: ^6.1.5
   flutter_native_splash: ^2.2.7
+  contacts_service: ^0.6.3  #通讯录插件
+  permission_handler: ^10.2.0 #权限管理
+  firebase_core: ^2.4.0
+  firebase_database: ^10.0.7
+  mailer: ^5.3.0
+  flutter_mailer: ^2.0.0
+  file_picker: ^5.2.4 # 文件路径
+  firebase_storage: ^11.0.7 #云储存
+  path_provider: ^2.0.11 #文件目录
+
+
 
 flutter_native_splash:
   color: "#f4feff"
@@ -72,6 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/image/
+    - assets/contacts.text
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
